<resources>
    <string name="app_name">Shamsaha</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="need_nhelp">Need Help</string>
    <string name="loading">Loading…!</string>
    <string name="Sponsorships">Sponsor</string>
    <string name="pay_now">Pay Now</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum</string>
    <string name="if_you_are_selected_to_attend_this_training_you_will_learn_first_hand_how_to_provide_emotional_logistical_support_to_women_suffering_from_abuse_in_bahrain_through_our_helplines_training_topics_activities_will_include_but_are_not_limited_to_domestic_sexual_violence_in_depth_sub_conscious_bias_understanding_trauma_bahraini_laws_legislation_women_in_the_media_understanding_crisis_advocacy_and_its_protocols" translatable="false"><![CDATA[If you are selected to attend this training, you will learn first hand how to provide emotional & logistical support to women suffering from abuse in Bahrain through our helplines. Training topics & activities will include but are not limited to: domestic & sexual violence in-depth, sub-conscious bias, understanding trauma, Bahraini laws & legislation, women in the media, & understanding crisis advocacy and its protocols.]]></string>
    <string name="be_ready_to_be_on_call_on_the_mobile_helpline_during_your_shift_provide_telephone_as_well_as_in_person_support_to_any_client_at_any_of_the_approved_locations" translatable="false"><![CDATA[Be ready to be on call on the mobile helpline during your shift & provide telephone as well as in-person support to any client at any of the approved locations.]]></string>
    <string name="we_have_over_100_women_volunteers_join_this_network_of_socially_conscious_compassionate_group_of_women" translatable="false"><![CDATA[We have over 100 women volunteers. Join this network of socially conscious & compassionate group of women!]]></string>
    <string name="form_submission" translatable="false">Thank you for submitting your application to become a crisis advocate! Due to the high volume of submissions, as the training dates approach, we will respond only to those applicants who meet the qualifications. We thank you for understanding that, and if you don\'t hear from us, please feel free to apply again or reach out on social media. Thank you again! From the whole Shamsaha team.</string>
    <string name="spon_test">\"Thank you for sponsoring Shamsaha! It is only because of people like you that we are able to serve thousands of women each year. If you require a receipt for this sponsorship, please feel free to email us at info@shamsaha.org and we can provide you with that. Thank you once again from the whole Shamsaha team. \"</string>
    <string name="contact_info">Contact Info :</string>
    <string name="advocacy_level" translatable="false">Advocacy Levels</string>
    <string name="forgetpasseord">Forgot Password</string>
    <string name="msg_token_fmt" translatable="false">AAAAgUKdWY0:APA91bE6O2ho0VKN5mYR4GSRUMZzcwhVNpGwdLl_8ILUuVki1XNUdlh6XdEJhJReYH5WZZdbcid_QLIujYEFkSZtqBtbfn_tduyglwVVPJq3Si5pN_r2pv-OrAtc40INmjNaB73SYzBp</string>
    <string name="audio_device">Audio Device</string>
    <string name="wcci_helpline_number">WCCI Helpline Number</string>
    <string name="arbic">Arabic</string>
    <string name="callee">client identity or phone number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="callHint" translatable="false">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>
    <string name="select_device">Select Audio Device</string>
    <string name="login_all_fields_required" translatable="false">All fields are required</string>
    <string name="login_user_progress_message" translatable="false">signing in…</string>
    <string name="new_channel_prompt" translatable="false">Enter a name for the new channel:</string>
    <string name="default_channel_name" translatable="false">General Channel</string>
    <string name="default_channel_unique_name" translatable="false">general</string>
    <string name="generic_error" translatable="false">An error occurred, please try again</string>
    <string name="loading_channels_message" translatable="false">Loading channel information</string>
    <string name="error_message" translatable="false">Chat not started yet, please try again after sometime</string>
    <string name="beginner" translatable="false">Beginner</string>
    <string name="silver" translatable="false">Silver</string>
    <string name="_0_6_shifts" translatable="false">0 - 6 Shifts</string>
    <string name="_7_20_shifts" translatable="false">7 - 20 Shifts</string>
    <string name="gold" translatable="false">Gold</string>
    <string name="_21_30_shifts" translatable="false">21 - 30 Shifts</string>
    <string name="platinum" translatable="false">Platinum</string>
    <string name="_30_shifts" translatable="false">+30 Shifts</string>
    <string name="admin_notes" translatable="false">Admin Notes</string>
    <string name="talk_now">Talk now</string>
    <string name="what_screen_name_do_you_want_to_use">What screen name do you want to use?</string>
    <string name="are_you_in_crisis">Are you in crisis?</string>
    <string name="how_old_are_you">How old are you? *</string>
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="what_is_your_race_ethnicity">What is your Race / Ethnicity?</string>
    <string name="how_did_you_hear_about_us">How did you hear about us?</string>
    <string name="chat_now">Chat Now</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_case_id">Please enter case ID</string>
    <string name="please_remember_the_case_id_for_future_use">Please remember the Case ID for future use</string>
    <string name="chat">Chat</string>
    <string name="english" translatable="false">English</string>
    <string name="english2" >English</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="call">Call</string>
    <string name="other_language">Other Language</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="email_id">Email ID</string>
    <string name="submit">Submit</string>
    <string name="helpline">Helpline</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="message">Message</string>
    <string name="personal_details">Personal Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="create_pin">Create PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="enter_4_digit_pin_number">Enter 4 digit PIN Number</string>
    <string name="re_enter_your_pin_number">Re-Enter your PIN Number</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="time_5_30pm">Time: 5.30PM</string>
    <string name="date">Date:</string>
    <string name="venue">Venue:</string>
    <string name="entry_fee">Entry Fee:</string>
    <string name="events">Events &amp; Media</string>
    <string name="volunteer">Volunteer</string>
    <string name="work_with_us">Work With Us</string>
    <string name="get_involved">Get Involved</string>
    <string name="crisis_advocate">Crisis Advocate</string>
    <string name="login">Login</string>
    <string name="or">- or -</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="forget_pin">Forgot PIN?</string>
    <string name="resources">Resources</string>
    <string name="no_data_found">No Data Found…!</string>
    <string name="company_name">Company Name</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount</string>
    <string name="quantity">Quantity</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="i_agree_and_accept">I agree and accept</string>
    <string name="become_a_crisis_advocate">Become a crisis advocate</string>
    <string name="other_opportunities">Other opportunities</string>
    <string name="apply">Apply</string>
    <string name="contact_us">Contact Us</string>
    <string name="personal_statement">Personal Statement</string>
    <string name="dot" translatable="false">...</string>
    <string name="upload_cv">Upload CV</string>
    <string name="interests_inquiry">Interests/ Inquiry</string>
    <string name="cancel">Cancel</string>
    <string name="_500_bhd_monthly">500 BHD</string>
    <string name="_1_000_bhd_nbi_annual">1,000 BHD</string>
    <string name="_2_000_bhd_nannual">2,000 BHD</string>
    <string name="additional">Additional</string>
    <string name="about_shamsaha">About Shamsaha</string>
    <string name="home">Home</string>
    <string name="per_country">\t\t\tPer Country</string>
    <string name="survivor_support_tools">\t\t\tSurvivor Support Tools</string>
    <string name="survivor_support_tool">Survivor Support Tools</string>
    <string name="lock_app">Lock App</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="forgot_case_id">Forgot case id?</string>
    <string name="upload_started">Uploading…</string>
    <string name="are_you_sure_want_to_share_your_location">Are you sure want to share your current location?</string>
    <string name="live_location">Share Location</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_want_exit_from_this_chat">Are you sure want to exit from this Chat?</string>
    <string name="options">Options</string>
    <string name="service" translatable="false">Service</string>
    <string name="help" translatable="false">Help</string>
    <string name="status" translatable="false">Status</string>
    <string name="report" translatable="false">Report</string>
    <string name="case_closed" translatable="false">Case Closed</string>
    <string name="follow_up_needed" translatable="false">Follow up Needed</string>
    <string name="done" translatable="false">Done</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="please_wait" translatable="false">Please wait…</string>
    <string name="case_report" translatable="false">Case Report</string>
    <string name="on_duty" translatable="false">On Duty</string>
    <string name="choose_language" translatable="false">Choose Language</string>
    <string name="is_it_safe_to_call_you_back_in_the_line_gets_disconnected">Is it safe to call you back if the line gets disconnected? *</string>
    <string name="Recommended_by_family_or_friend">Recommended by family or friend</string>
</resources>