<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="5dp">

    <!--android:text="Are you sure you want to use this coupon?"-->
    <!-- <Button
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_50_dp"
         android:layout_marginTop="@dimen/margin_40_dp"
         android:text="@string/btn_logout"
         android:textColor="@color/white"
         android:textStyle="bold" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_book"
                android:text="@string/advocacy_level"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_dialog_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_icon_ionic_ios_close_circle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/beginner"
                        android:textColor="@color/colorGray"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_6_shifts"
                        android:textColor="@color/colorGray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/silver"
                        android:textColor="@color/colorGray"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_7_20_shifts"
                        android:textColor="@color/colorGray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/gold"
                        android:textColor="@color/colorGray"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_21_30_shifts"
                        android:textColor="@color/colorGray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorLiteGray"
                    tools:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_book"
                        android:text="@string/platinum"
                        android:textColor="@color/colorGray"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_shifts"
                        android:textColor="@color/colorGray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink"
                    tools:layout_gravity="center" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/ic_logo_no_back"
                    app:tint="@color/colorPink"
                    tools:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>